[package]
name = "tcpblog"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "=0.2.0-alpha.4"
ansi-parser = "0.6.5"
lazy_static = "1.2"
regex = "0.2"
chrono = "0.4.9"
